// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviePageTabs should render correctly MoviePageTabs should render correctly in AddReview page 1`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <nav
      class="movie-nav movie-card__nav"
    >
      <ul
        class="movie-nav__list"
      >
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Overview
          </a>
        </li>
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Details
          </a>
        </li>
        <li
          class="movie-nav__item movie-nav__item--active"
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Reviews
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="add-review"
    >
      
      <form
        action="#"
        class="add-review__form"
      >
        <div
          class="rating"
        >
          <div
            class="rating__stars"
          >
            <input
              class="rating__input"
              id="star-1"
              name="rating"
              type="radio"
              value="1"
            />
            <label
              class="rating__label"
              for="star-1"
            >
              Rating 1
            </label>
            <input
              class="rating__input"
              id="star-2"
              name="rating"
              type="radio"
              value="2"
            />
            <label
              class="rating__label"
              for="star-2"
            >
              Rating 2
            </label>
            <input
              class="rating__input"
              id="star-3"
              name="rating"
              type="radio"
              value="3"
            />
            <label
              class="rating__label"
              for="star-3"
            >
              Rating 3
            </label>
            <input
              class="rating__input"
              id="star-4"
              name="rating"
              type="radio"
              value="4"
            />
            <label
              class="rating__label"
              for="star-4"
            >
              Rating 4
            </label>
            <input
              class="rating__input"
              id="star-5"
              name="rating"
              type="radio"
              value="5"
            />
            <label
              class="rating__label"
              for="star-5"
            >
              Rating 5
            </label>
            <input
              class="rating__input"
              id="star-6"
              name="rating"
              type="radio"
              value="6"
            />
            <label
              class="rating__label"
              for="star-6"
            >
              Rating 6
            </label>
            <input
              class="rating__input"
              id="star-7"
              name="rating"
              type="radio"
              value="7"
            />
            <label
              class="rating__label"
              for="star-7"
            >
              Rating 7
            </label>
            <input
              class="rating__input"
              id="star-8"
              name="rating"
              type="radio"
              value="8"
            />
            <label
              class="rating__label"
              for="star-8"
            >
              Rating 8
            </label>
            <input
              class="rating__input"
              id="star-9"
              name="rating"
              type="radio"
              value="9"
            />
            <label
              class="rating__label"
              for="star-9"
            >
              Rating 9
            </label>
            <input
              class="rating__input"
              id="star-10"
              name="rating"
              type="radio"
              value="10"
            />
            <label
              class="rating__label"
              for="star-10"
            >
              Rating 10
            </label>
          </div>
        </div>
        <div
          class="add-review__text"
        >
          <textarea
            class="add-review__textarea"
            id="review-text"
            maxlength="400"
            minlength="50"
            name="review-text"
            placeholder="Review text"
            required=""
          />
          <div
            class="add-review__submit"
          >
            <button
              class="add-review__btn"
              disabled=""
              type="submit"
            >
              Post
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class="movie-card__reviews movie-card__row"
    >
      <div
        class="movie-card__reviews-col"
      >
        <div
          class="review"
        >
          <blockquote
            class="review__quote"
          >
            <p
              class="review__text"
            >
              Poised to be an instant classic, almost everything about this film is phenomenal - the acting, the cinematography, the discography, etc.
            </p>
            <footer
              class="review__details"
            >
              <cite
                class="review__author"
              >
                Max
              </cite>
              <time
                class="review__date"
                datetime="{dayjs(new Date(item.date)).format(\`YYYY-MM-DD\`)}"
              >
                February 18, 2021
              </time>
            </footer>
          </blockquote>
          <div
            class="review__rating"
          >
            3.9
          </div>
        </div>
        <div
          class="review"
        >
          <blockquote
            class="review__quote"
          >
            <p
              class="review__text"
            >
              It was well acted, directed, and the music was good. But the story is yawn. Not trying to rip anybody but I checked my watch a dozen times during this movie.
            </p>
            <footer
              class="review__details"
            >
              <cite
                class="review__author"
              >
                Christina
              </cite>
              <time
                class="review__date"
                datetime="{dayjs(new Date(item.date)).format(\`YYYY-MM-DD\`)}"
              >
                February 17, 2021
              </time>
            </footer>
          </blockquote>
          <div
            class="review__rating"
          >
            9.7
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MoviePageTabs should render correctly MoviePageTabs should render correctly, when selected Details 1`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <nav
      class="movie-nav movie-card__nav"
    >
      <ul
        class="movie-nav__list"
      >
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Overview
          </a>
        </li>
        <li
          class="movie-nav__item movie-nav__item--active"
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Details
          </a>
        </li>
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Reviews
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="movie-card__text movie-card__row"
    >
      <div
        class="movie-card__text-col"
      >
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Director
          </strong>
          <span
            class="movie-card__details-value"
          >
            Justin Kurzel
          </span>
        </p>
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Starring
          </strong>
          <span
            class="movie-card__details-value"
          >
            Michael Fassbender, Marion Cotillard, Jack Madigan
          </span>
        </p>
      </div>
      <div
        class="movie-card__text-col"
      >
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Run Time
          </strong>
          <span
            class="movie-card__details-value"
          >
            1h 53m
          </span>
        </p>
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Genre
          </strong>
          <span
            class="movie-card__details-value"
          >
            Drama
          </span>
        </p>
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Released
          </strong>
          <span
            class="movie-card__details-value"
          >
            2015
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`MoviePageTabs should render correctly MoviePageTabs should render correctly, when selected Overview 1`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <nav
      class="movie-nav movie-card__nav"
    >
      <ul
        class="movie-nav__list"
      >
        <li
          class="movie-nav__item movie-nav__item--active"
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Overview
          </a>
        </li>
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Details
          </a>
        </li>
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Reviews
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="movie-rating"
    >
      <div
        class="movie-rating__score"
      >
        3.3
      </div>
      <p
        class="movie-rating__meta"
      >
        <span
          class="movie-rating__level"
        >
          Normal
        </span>
        <span
          class="movie-rating__count"
        >
          48798
           ratings
        </span>
      </p>
    </div>
    <div
      class="movie-card__text"
    >
      <p>
        Macbeth, the Thane of Glamis, receives a prophecy from a trio of witches that one day he will become King of Scotland. Consumed by ambition and spurred to action by his wife, Macbeth murders his king and takes the throne for himself.
      </p>
      <p
        class="movie-card__director"
      >
        <strong>
          Director: 
          Justin Kurzel
        </strong>
      </p>
      <p
        class="movie-card__starring"
      >
        <strong>
          Starring: 
          Michael Fassbender, Marion Cotillard, Jack Madigan
           and other
        </strong>
      </p>
    </div>
  </div>
</div>
`;

exports[`MoviePageTabs should render correctly MoviePageTabs should render correctly, when selected Reviews 1`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <nav
      class="movie-nav movie-card__nav"
    >
      <ul
        class="movie-nav__list"
      >
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Overview
          </a>
        </li>
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Details
          </a>
        </li>
        <li
          class="movie-nav__item movie-nav__item--active"
        >
          <a
            class="movie-nav__link"
            href="#"
          >
            Reviews
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="movie-card__reviews movie-card__row"
    >
      <div
        class="movie-card__reviews-col"
      >
        <div
          class="review"
        >
          <blockquote
            class="review__quote"
          >
            <p
              class="review__text"
            >
              Poised to be an instant classic, almost everything about this film is phenomenal - the acting, the cinematography, the discography, etc.
            </p>
            <footer
              class="review__details"
            >
              <cite
                class="review__author"
              >
                Max
              </cite>
              <time
                class="review__date"
                datetime="{dayjs(new Date(item.date)).format(\`YYYY-MM-DD\`)}"
              >
                February 18, 2021
              </time>
            </footer>
          </blockquote>
          <div
            class="review__rating"
          >
            3.9
          </div>
        </div>
        <div
          class="review"
        >
          <blockquote
            class="review__quote"
          >
            <p
              class="review__text"
            >
              It was well acted, directed, and the music was good. But the story is yawn. Not trying to rip anybody but I checked my watch a dozen times during this movie.
            </p>
            <footer
              class="review__details"
            >
              <cite
                class="review__author"
              >
                Christina
              </cite>
              <time
                class="review__date"
                datetime="{dayjs(new Date(item.date)).format(\`YYYY-MM-DD\`)}"
              >
                February 17, 2021
              </time>
            </footer>
          </blockquote>
          <div
            class="review__rating"
          >
            9.7
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
